themes/boots/boots.css
/* ... */
.alert-queued {
    background: #ddd;
}

.alert-queued .alert-link {
    color: #777;
}
.alert-processing .alert-link {
    color: #333;
}

.processing {
    z-index: 1;
}
/*.environment-task-logs > div {*/
    /*position: relative;*/
    /*z-index: 2;*/
/*}*/

.project-environments a.alert-queued,
.devshop-tasks a.list-group-item-queued {
    color: #777;
}
.devshop-tasks a.list-group-item-queued {
    color: #777;
    background-color: #ddd;
}
.devshop-tasks a.list-group-item-queued:hover {
    color: #333;
    background-color: #dedede;
}
.project-environments a.alert-processing,
.devshop-tasks a.list-group-item-processing {
    color: #333;
    background-color: #ddd;
}
.project-environments a.alert-processing:hover,
.devshop-tasks a.list-group-item-processing:hover {
    color: #000;
    background-color: #ccc;
}

.refresh-link {
    font-size: 0.8em;
    color: #444;
    white-space: nowrap;
}

#project-add-status {
    margin-top: 15px;
    overflow-x: hidden;
}


.panel.devshop-command .panel-heading {
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
}
.panel.devshop-command pre {
  margin: 0;
  border: none;
  border-radius: 0;
  background: none;
}

.environment-dothooks pre {
  margin: 0 1em 1em;
  font-size: .8em;
  overflow-x: scroll;
  word-wrap: normal;
}

.follow-checkbox {
    position: fixed;
    bottom: 10px;
    left: 10px;
    z-index: 10;
}

.task-details {
  margin-top: 3em;
}

.running-indicator {
    display: none;
}

.running-indicator.active {
    display: block;
}
.task-badge {
    margin-right: 5px;
}
.task-arg {
  padding-right: 2em;
  white-space: nowrap;
}

.task-arguments-list {
  display: inline-block;

}

.ansi_color_bg_black {
    background: #262626;
}

#hosting-task-confirm-form .form-checkboxes .form-item span {
    width: 6em;
    display: inline-block;
    font-size: 0.8em;
    text-transform: uppercase;
    text-align: right;
    padding-right: 1em;
}

#hosting-task-confirm-form .form-checkboxes .form-item code {
    background: transparent;
}

.panel-ansii.panel-body {
    background: #262626;
    padding: 0;
}

.panel-ansii.panel-body pre {
    padding: 1.25em;
}

.errors-table td > div {
    color: rgb(51, 51, 51);
    display: block;
    font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
    font-size: 13px;
}

#project-settings-table .form-control,
#hosting-task-confirm-form .form-control#edit-parameters-environment-name {
    width: auto;
    display:inline;

}

#devshop-project-create-step-git #edit-cancel {
    float: right;
}

.project-add-environment-button {
    margin: 0px auto;
    text-align: center;
}
#edit-add-environment {
    background: #999;
}
p.wait {
    text-align: center;
    padding: 32px 0px 52px;
    background: bottom center no-repeat url(images/loading.gif);
}

p.error {
    text-align: center;
    padding: 32px 0px 52px;
}

#hosting-site-info, #hosting-task-list {
    width: 100%;
    float: none;
    margin: 0;
}
.node-type-server .panel-body .form-item {
    margin-right: 2em;
}

a.logo img {
    max-height: 3em;
}

.project-link {
    font-size: 1.5em;
    font-weight: bold;
    display: block;
}

.btn-group-links {
    /*white-space: nowrap;*/
}

.btn-hooks {
    float: none !important;
    display: inline-block;
}

